--- a/index.html
+++ b/index.html
@@ -5,11 +5,55 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Home</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-
+  <header class="cabecalho">
+    <img src="images/global_solution_icon_150175.png" alt="Logo site" text="Logo do site">
+    <nav>
+      <a href="#">Home</a>
+      <a href="./pages/games.html">Games</a>
+      <a href="./pages/mobile.html">Mobile</a>
+      <a href="./pages/tecnologia.html">Tecnologia</a>
+    </nav>
+  </header>
+  <h2 class="tit-page">Conteúdo</h2>
+  <section class="conteudo">
+    <article>
+      <figure>
+        <img src="img/photo-1493711662062-fa541adb3fc8.jpeg" alt="Imagem Games" text="Imagem de Games">
+        <figcaption>Games</figcaption>
+      </figure>
+    </article>
+    <article>
+      <figure>
+        <img src="img/baixados.jpeg" alt="Imagem Mobile" text="Imagem de Mobile">
+        <figcaption>Mobile</figcaption>
+      </figure>
+    </article>
+    <article>
+      <figure>
+        <img src="img/conceito-de-rede-abstrata-de-comunicacao-e-tecnologia_34629-641.webp" alt="" text="">
+        <figcaption>Tecnologia</figcaption>
+      </figure>
+    </article>
+  </section>
+  <footer class="rodape">
+    <h2>FALE CONOSCO</h2>
+    <nav>
+      <a href="https://github.com/" target="_blank">
+        <img src="./img/github-mark-white.png" alt="Logo Github" text="Logo do Github">
+      </a>
+      <a href="https://facebook.com/" target="_blank">
+        <img src="./img/image_preview.png" alt="Logo Facebook" text="Logo do Facebook">
+      </a>
+      <a href="https://twitter.com" target="_blank">
+        <img src="./img/2021 Twitter logo - blue.png" alt="Logo Twitter" text="Logo do Twitter">
+      </a>
+    </nav>
+  </footer>
 </body>
 
 </html>
