Estilização da Home(Imagens,Cabeçalho e Footer)

--- a/index.html
+++ b/index.html
@@ -14,44 +14,40 @@
     <img src="images/global_solution_icon_150175.png" alt="Logo site" text="Logo do site">
     <nav>
       <a href="#">Home</a>
-      <a href="./pages/games.html">Games</a>
-      <a href="./pages/mobile.html">Mobile</a>
-      <a href="./pages/tecnologia.html">Tecnologia</a>
+      <a href="./pages/games.html">Agricultura</a>
+      <a href="./pages/mobile.html">IAs Generativas</a>
+      <a href="./pages/tecnologia.html">Cultivo Eficiente</a>
+      <a href="./pages/tecnologia.html">Contato</a>
     </nav>
   </header>
   <h2 class="tit-page">Conteúdo</h2>
   <section class="conteudo">
     <article>
       <figure>
-        <img src="img/photo-1493711662062-fa541adb3fc8.jpeg" alt="Imagem Games" text="Imagem de Games">
+        <img src="images/232209-agricultura-sustentavel-entenda-o-conceito-e-beneficios-1536x1024.jpg"
+          alt="Imagem Games" text="Imagem de Games">
         <figcaption>Games</figcaption>
       </figure>
     </article>
     <article>
       <figure>
-        <img src="img/baixados.jpeg" alt="Imagem Mobile" text="Imagem de Mobile">
+        <img src="images/agricultura-sustentavel-scaled.webp" alt="Imagem Mobile" text="Imagem de Mobile">
         <figcaption>Mobile</figcaption>
       </figure>
     </article>
     <article>
       <figure>
-        <img src="img/conceito-de-rede-abstrata-de-comunicacao-e-tecnologia_34629-641.webp" alt="" text="">
+        <img src="images/agroecologia-imagem.webp" alt="" text="">
         <figcaption>Tecnologia</figcaption>
       </figure>
     </article>
   </section>
   <footer class="rodape">
-    <h2>FALE CONOSCO</h2>
     <nav>
-      <a href="https://github.com/" target="_blank">
-        <img src="./img/github-mark-white.png" alt="Logo Github" text="Logo do Github">
-      </a>
-      <a href="https://facebook.com/" target="_blank">
-        <img src="./img/image_preview.png" alt="Logo Facebook" text="Logo do Facebook">
-      </a>
-      <a href="https://twitter.com" target="_blank">
-        <img src="./img/2021 Twitter logo - blue.png" alt="Logo Twitter" text="Logo do Twitter">
-      </a>
+      <h3> Gustavo Bernardo Basilio do Bomfim (RM93770)</h3>
+      <h3>Geovana Ribeiro Domingos Silva (RM99646)</h3>
+      <h3>Leonardo Ferreira Lizier</h3>
+      <h3>Henrique Sanches Lima</h3>
     </nav>
   </footer>
 </body>
