Criação da páginas

--- a/index.html
+++ b/index.html
@@ -17,34 +17,35 @@
       <a href="./pages/games.html">Agricultura</a>
       <a href="./pages/mobile.html">IAs Generativas</a>
       <a href="./pages/tecnologia.html">Cultivo Eficiente</a>
-      <a href="./pages/tecnologia.html">Contato</a>
+      <a href="./pages/tecnologia.html">Definir</a>
     </nav>
   </header>
-  <h2 class="tit-page">Conteúdo</h2>
+  <h2 class="tit-page">Aprenda agora sobre:</h2>
   <section class="conteudo">
     <article>
       <figure>
         <img src="images/232209-agricultura-sustentavel-entenda-o-conceito-e-beneficios-1536x1024.jpg"
           alt="Imagem Games" text="Imagem de Games">
-        <figcaption>Games</figcaption>
+        <figcaption>importância da Agricultura
+          sustentável</figcaption>
       </figure>
     </article>
     <article>
       <figure>
         <img src="images/agricultura-sustentavel-scaled.webp" alt="Imagem Mobile" text="Imagem de Mobile">
-        <figcaption>Mobile</figcaption>
+        <figcaption>IAs Generativas na produção e distribuição de alimentos</figcaption>
       </figure>
     </article>
     <article>
       <figure>
         <img src="images/agroecologia-imagem.webp" alt="" text="">
-        <figcaption>Tecnologia</figcaption>
+        <figcaption>Modelos de Cultivo Eficiente</figcaption>
       </figure>
     </article>
   </section>
   <footer class="rodape">
     <nav>
-      <h3> Gustavo Bernardo Basilio do Bomfim (RM93770)</h3>
+      <h3>Gustavo Bernardo Basilio do Bomfim (RM93770)</h3>
       <h3>Geovana Ribeiro Domingos Silva (RM99646)</h3>
       <h3>Leonardo Ferreira Lizier</h3>
       <h3>Henrique Sanches Lima</h3>
