Padronização dos estilos das páginas menos contato

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <img src="images/global_solution_icon_150175.png" alt="Logo site" text="Logo do site">
     <nav>
       <a href="#">Home</a>
-      <a href="./pages/games.html">Agricultura</a>
-      <a href="./pages/mobile.html">IAs Generativas</a>
-      <a href="./pages/tecnologia.html">Cultivo Eficiente</a>
-      <a href="./pages/tecnologia.html">Definir</a>
+      <a href="./pages/agricultura.html">Agricultura</a>
+      <a href="./pages/ia-generativas.html">IAs Generativas</a>
+      <a href="./pages/cultivo-eficiente.html">Cultivo Eficiente</a>
+      <a href="./pages/contato.html">Contato</a>
     </nav>
   </header>
   <h2 class="tit-page">Aprenda agora sobre:</h2>
@@ -47,8 +47,8 @@
     <nav>
       <h3>Gustavo Bernardo Basilio do Bomfim (RM93770)</h3>
       <h3>Geovana Ribeiro Domingos Silva (RM99646)</h3>
-      <h3>Leonardo Ferreira Lizier</h3>
-      <h3>Henrique Sanches Lima</h3>
+      <h3>Leonardo Ferreira Lizier (RM551509)</h3>
+      <h3>Henrique Sanches Lima ()</h3>
     </nav>
   </footer>
 </body>
