Alteração no site de contato + ajustes nos demais

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -11,7 +11,7 @@
 
 <body>
   <header class="cabecalho">
-    <img src="images/global_solution_icon_150175.png" alt="Logo site" text="Logo do site">
+    <img src="../images/global_solution_icon_150175.png" alt="Logo site" text="Logo do site">
     <nav>
       <a href="../index.html">Home</a>
       <a href="./agricultura.html">Agricultura</a>
@@ -22,26 +22,53 @@
   </header>
   <h2 class="tit-page">Formulário para Contato</h2>
   <section class="conteudo">
-    <article>
-      <figure>
-        <img src="images/232209-agricultura-sustentavel-entenda-o-conceito-e-beneficios-1536x1024.jpg"
-          alt="Imagem Games" text="Imagem de Games">
-        <figcaption>importância da Agricultura
-          sustentável</figcaption>
-      </figure>
-    </article>
-    <article>
-      <figure>
-        <img src="images/agricultura-sustentavel-scaled.webp" alt="Imagem Mobile" text="Imagem de Mobile">
-        <figcaption>IAs Generativas na produção e distribuição de alimentos</figcaption>
-      </figure>
-    </article>
-    <article>
-      <figure>
-        <img src="images/agroecologia-imagem.webp" alt="" text="">
-        <figcaption>Modelos de Cultivo Eficiente</figcaption>
-      </figure>
-    </article>
+    <div class="box-formulario">
+
+      <div class="formulario">
+
+        <div class="title-form">
+          <h1><i class="icon icon-comments-o"></i> Fale Conosco Agora</h1>
+        </div>
+
+        <form>
+
+
+          <span>
+            <input type="text" class="input-slide" id="nome" name="nome" placeholder="Nome" autocomplete="off"
+              required="" />
+            <label for="nome"> <i class="icon icon-user-outline"></i> </label>
+          </span>
+
+          <span>
+            <input type="text" class="input-slide" id="email" name="email" placeholder="E-mail" autocomplete="off"
+              required="" />
+            <label for="email"> <i class="icon icon-mail-3"></i> </label>
+          </span>
+
+          <span>
+            <input type="text" class="input-slide" id="assunto" name="assunto" placeholder="Assunto" autocomplete="off"
+              required="" />
+            <label for="assunto"> <i class="icon icon-help"></i> </label>
+          </span>
+
+          <span>
+            <textarea type="text" class="textarea-slide" id="mensagem" name="mensagem" rows="3" placeholder="Mensagem"
+              autocomplete="off" required=""></textarea>
+            <label for="mensagem"> <i class="icon icon-commenting-o"></i> </label>
+          </span>
+
+          <div class="box-btn">
+
+            <button class="btn-envia">
+              Enviar
+            </button>
+          </div>
+
+        </form>
+
+      </div>
+
+    </div>
   </section>
   <footer class="rodape">
     <nav>
