--- a/pages/cultivo-eficiente.html
+++ b/pages/cultivo-eficiente.html
@@ -29,6 +29,9 @@
         <figcaption>Modelos de Cultivo Eficiente</figcaption>
       </figure>
     </article>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit quam eius doloremque, dolor alias qui fugiat
+      itaque dignissimos, unde, saepe cum nam laudantium nobis nisi eum exercitationem ad minima impedit?</p>
+
   </section>
   <footer class="rodape">
     <nav>
