--- a/pages/agricultura.html
+++ b/pages/agricultura.html
@@ -30,6 +30,8 @@
           sustentável</figcaption>
       </figure>
     </article>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit quam eius doloremque, dolor alias qui fugiat
+      itaque dignissimos, unde, saepe cum nam laudantium nobis nisi eum exercitationem ad minima impedit?</p>
   </section>
   <footer class="rodape">
     <nav>
