--- a/pages/ia-generativas.html
+++ b/pages/ia-generativas.html
@@ -29,6 +29,9 @@
         <figcaption>IAs Generativas na produção e distribuição de alimentos</figcaption>
       </figure>
     </article>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit quam eius doloremque, dolor alias qui fugiat
+      itaque dignissimos, unde, saepe cum nam laudantium nobis nisi eum exercitationem ad minima impedit?</p>
+
 
   </section>
   <footer class="rodape">
