--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <a href="./pages/ia-generativas.html">IAs Generativas</a>
       <a href="./pages/cultivo-eficiente.html">Cultivo Eficiente</a>
       <a href="./pages/contato.html">Contato</a>
+      <a href="./pages/projeto.html">Projeto</a>
     </nav>
   </header>
   <h2 class="tit-page">Aprenda agora sobre:</h2>
@@ -48,7 +49,7 @@
       <h3>Gustavo Bernardo Basilio do Bomfim (RM93770)</h3>
       <h3>Geovana Ribeiro Domingos Silva (RM99646)</h3>
       <h3>Leonardo Ferreira Lizier (RM551509)</h3>
-      <h3>Henrique Sanches Lima ()</h3>
+      <h3>Henrique Sanches Lima (RM551633)</h3>
     </nav>
   </footer>
 </body>
