--- a/pages/contato.html
+++ b/pages/contato.html
@@ -18,6 +18,7 @@
       <a href="./ia-generativas.html">IAs Generativas</a>
       <a href="./cultivo-eficiente.html">Cultivo Eficiente</a>
       <a href="#">Contato</a>
+      <a href="./projeto.html">Projeto</a>
     </nav>
   </header>
   <h2 class="tit-page">Formulário para Contato</h2>
@@ -75,7 +76,7 @@
       <h3>Gustavo Bernardo Basilio do Bomfim (RM93770)</h3>
       <h3>Geovana Ribeiro Domingos Silva (RM99646)</h3>
       <h3>Leonardo Ferreira Lizier (RM551509)</h3>
-      <h3>Henrique Sanches Lima ()</h3>
+      <h3>Henrique Sanches Lima (RM551633)</h3>
     </nav>
   </footer>
 </body>
