--- a/pages/ia-generativas.html
+++ b/pages/ia-generativas.html
@@ -13,11 +13,12 @@
   <header class="cabecalho">
     <img src="../images/global_solution_icon_150175.png" alt="Logo site" text="Logo do site">
     <nav>
-      <a href="#">Home</a>
+      <a href="../index.html">Home</a>
       <a href="./agricultura.html">Agricultura</a>
-      <a href="./ia-generativas.html">IAs Generativas</a>
+      <a href="#">IAs Generativas</a>
       <a href="./cultivo-eficiente.html">Cultivo Eficiente</a>
       <a href="./contato.html">Contato</a>
+      <a href="./projeto.html">Projeto</a>
     </nav>
   </header>
   <h2 class="tit-page">IAs Generativas:</h2>
@@ -29,8 +30,11 @@
         <figcaption>IAs Generativas na produção e distribuição de alimentos</figcaption>
       </figure>
     </article>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit quam eius doloremque, dolor alias qui fugiat
-      itaque dignissimos, unde, saepe cum nam laudantium nobis nisi eum exercitationem ad minima impedit?</p>
+    <p>Por meio da análise e interpretação de informações de centenas de bancos de dados diferentes, novos algoritmos
+      desenvolvidos por pesquisadores do Centro de Inteligência Artificial (C4AI) da USP são capazes de identificar
+      quais regiões de uma determinada cidade carecem de infraestrutura e de opções adequadas para o fornecimento de
+      alimentos. A inovação busca mostrar onde o poder público, uma empresa ou outro tipo de organização deve agir para
+      tomar decisões mais precisas e eficientes para enfrentar a insegurança alimentar.</p>
 
 
   </section>
@@ -39,7 +43,7 @@
       <h3>Gustavo Bernardo Basilio do Bomfim (RM93770)</h3>
       <h3>Geovana Ribeiro Domingos Silva (RM99646)</h3>
       <h3>Leonardo Ferreira Lizier (RM551509)</h3>
-      <h3>Henrique Sanches Lima ()</h3>
+      <h3>Henrique Sanches Lima (RM551633)</h3>
     </nav>
   </footer>
 </body>
