--- a/pages/projeto.html
+++ b/pages/projeto.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Agricultura Sustentável</title>
+  <title>Projeto</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -31,24 +31,15 @@
           sustentável</figcaption>
       </figure>
     </article>
-    <p>De maneira resumida, a agricultura sustentável é aquela que respeita o meio ambiente e consegue ser
-      economicamente viável do ponto de vista social.
-      Um exemplo disso está no sistema de plantio direto. A técnica se baseia em não arar o solo antes do plantio,
-      mantendo-o coberto por folhagens secas. Essa camada contribui para a proteção do solo de erosões e outras
-      condições desfavoráveis.
-      Outra característica bastante forte desta prática é a diminuição do uso de adubos químicos, fertilizantes e
-      pesticidas nos alimentos. Além disso, a agricultura sustentável também procura alternativas de fontes de energia
-      limpa e formas para a reutilização da água.
-      Por causa dos ganhos obtidos com a produtividade gerada pela agricultura sustentável, o agronegócio brasileiro já
-      vinha adotando práticas ecológicas. Com o aumento da busca por alimentos mais saudáveis, a demanda por melhores
-      métodos de produção também cresce.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit quam eius doloremque, dolor alias qui fugiat
+      itaque dignissimos, unde, saepe cum nam laudantium nobis nisi eum exercitationem ad minima impedit?</p>
   </section>
   <footer class="rodape">
     <nav>
       <h3>Gustavo Bernardo Basilio do Bomfim (RM93770)</h3>
       <h3>Geovana Ribeiro Domingos Silva (RM99646)</h3>
-      <h3>Leonardo Ferreira Lizier (RM551509)</h3>
-      <h3>Henrique Sanches Lima (RM551633)</h3>
+      <h3>Leonardo Ferreira Lizier</h3>
+      <h3>Henrique Sanches Lima</h3>
     </nav>
   </footer>
 </body>
